# News-app-python-gui-tkinter

./: .replit  news_gui.py  pyproject.toml
