[tool.poetry]
name = "repl-nix-python-gui-tkinter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python_gui_tkinter"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pil-ext = "0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
